# ztk_api

./: .editorconfig  Makefile  README.md  pyproject.toml  requirements.txt  todo.md
.github/workflows/: black-format.yml  pylama-lint.yml  pytest.yml
ztk_api/: bang_dan_tui_jian_resp.json  guess_you_like_resp.json  item_detail_resp.json  ju_hua_suan_resp.json  nine_nine_resp.json  search_resp.json  test_slot.py  tmall_chao_shi_resp.json  tmall_shang_pin_resp.json
