[tool.poetry]
name = "ztk_api"
version = "0.3.2"
description = "折淘客接口"
readme = "README.md"
homepage = "https://github.com/QiYuTechDev/ztk_api"
authors = ["dev <dev@qiyutech.tech>"]

[tool.poetry.dependencies]
python = "^3.9"

pydantic = ">=1.7,<2"
dataclasses-json = ">=0.5,<0.6"
structlog = ">=20,<22"

aiohttp = ">=3.7,<4"
requests = ">=2.25,<3"

# prepare for std tbk API
tbk_api = ">=0.2.1,<0.3"

[tool.poetry.dev-dependencies]
black = "*"
pytest = "*"
pylama = "*"

[build-system]
requires = ["poetry>=1"]
build-backend = "poetry.masonry.api"
